		Renaming oldtestmips back to testmips.
20190523	Starting to move guest OS installation instructions into
		individual machine pages, rather than having all of them
		randomly in the general guest OS page.
20190525	Adding detection of /opt/X11/{include,lib} in the configure
		script, to build with X11 on MacOS with XQuartz installed
		(thanks to eschatologist in the #GXemul IRC channel on
		FreeNode for noticing this).
20190530	Removing the "QEMU_MIPS" machine mode, which was useful back
		in 2006 to compare performance against QEMU's MIPS emulation.
20190601	The fix 2018-06-13 for translation invalidation when using
		larger than 4 KB pages, which made HelenOS/malta run further,
		caused a regressions which broke NetBSD/hpcmips (on VR4121
		CPUs, which have 1 KB native page size). A bit of cleanup seems
		to have fixed this, so that both NetBSD/hpcmips and
		HelenOS/malta work now.
		Applying a fix for the ARM sbc and rsc instructions from
		Joergen Nilsson.
20190606	Changing PCI device nr from 9 to 10 for the PIIX4 controller
		in the Malta emulation mode, to match a real dmesg from
		NetBSD/malta.
		Fixing disassembly of the MIPS TGEI, TGEIU, TLTI, TLTIU, TEQI,
		and TNEI instructions (NetBSD's pkgsrc patch had it wrong!).
		Implementing the MIPS TGEI, TGEIU, TLTI, TLTIU, TEQI, and TNEI
		instructions (but have not really tested them).
		Updating NetBSD/evbmips (Malta) installation instructions from
		7.1.2 to 8.0 (which needs the tgeiu instruction to boot).
		Fixing pmax bootpath bug (thanks for Andreas Gustafsson for 
		figuring out what the problem was).
20190610	Adding a memory range (ROM) dumping tool for HP 700/RX to the
		experiments directory.
20190611	Expanding the MIPS lw/sw 2-, 3-, and 4-instruction combinations
		(when loading/storing using the same base register) so that
		they are used also when emulating 64-bit CPUs such as the
		R4400. (Note: still lw/sw, i.e. 32-bit loads and stores, NOT
		ld/sd.)  Also stretching it to 5-instruction-sequences.